<resources>
    <string name="app_name">Monkeyboard Keystone Radio</string>

    <string name="no_saved_stations_question">Radio has no stored stations, perform scan?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <string name="device_connection_timed_out_try_again">Waited too long for device to connect. \nTry again?</string>
    <string name="dialog_dab_search_try_again_message">No stations found. Make sure the arial is plugged in.\nTry again?</string>


    <string name="settings_title">Settings</string>
    <string name="settings_title_radio">Radio</string>
    <string name="settings_title_control">Control</string>
    <string name="settings_title_volume">Volume</string>
    <string name="settings_title_about">About</string>

    <string name="radio_status_connecting">Connecting…</string>

    <string name="setting_perform_dab_search_button_key">dab_search</string>
    <string name="setting_perform_dab_search_text">Perform DAB Search</string>
    <string name="setting_perform_dab_search_summary">Clear radio database and perform a DAB search</string>
    <string name="setting_perform_dab_search_confirmation">Are you sure you want to clear the currently saved DAB stations and perform a search?</string>

    <string name="dialog_dab_search_title">DAB Search</string>
    <string name="dialog_dab_search_status_connecting">Connecting</string>
    <string name="dialog_dab_search_status_searching">Searching</string>
    <string name="dialog_dab_search_status_copying">Copying</string>
    <string name="dialog_dab_search_status_failed">Failed</string>

    <string name="dialog_dab_search_failed_no_channels_found">No channels found</string>
    <string name="dialog_dab_search_failed_timed_out">Timed out waiting for board to connect</string>

    <string name="dialog_dab_search_wait_connect">Waiting for device to connect</string>
    <string name="dialog_dab_search_found_channels_progress">Found %1$d channels</string>
    <string name="dialog_dab_search_copying_channels_progress">Copied %1$d channels</string>

    <string name="setting_duck_volume">Duck Volume</string>
    <string name="setting_duck_volume_summary">Volume that will be set when \
        another app needs temporary audio focus</string>
    <string name="setting_duck_volume_updated">Duck volume updated</string>

    <string name="setting_play_on_open">Play on open</string>
    <string name="setting_play_on_open_summary">When the app comes to the foreground, automatically press play</string>

    <string name="setting_headunitcontroller_input">Headunit Controller input</string>
    <string name="setting_headunitcontroller_input_summary">Use Custom Headunit Controller as main device input (My custom app)</string>

    <string name="setting_scroll_wrap">Scroll wrap</string>
    <string name="setting_scroll_warp_summary">When scrolling with the cursor, warp around at each end</string>

    <string name="settings_icon_description">Settings</string>

    <string name="about_category_title">About</string>
    <string name="about_text">Written by Oliver Bell, 2017\nGPL 3.0 Open Source \nhttp://github.com/freshollie/monkeyboard-radio-android/</string>

    <string name="program_datarate_placeholder">%1$d Kbps</string>

    <string name="DAB_CURRENT_CHANNEL_INDEX_KEY">dab_current_channel_index</string>
    <string name="FM_CURRENT_FREQUENCY_KEY">fm_current_frequency</string>

    <string name="DAB_STATION_LIST_KEY">dab_station_list</string>
    <string name="FM_STATION_LIST_KEY">fm_station_list</string>
    <string name="VOLUME_KEY">volume</string>
    <string name="DUCK_VOLUME_KEY">duck_volume</string>
    <string name="PREF_PLAY_ON_OPEN">play_on_open</string>
    <string name="PREF_HEADUNIT_CONTROLLER_INPUT">headunit_main_input</string>
    <string name="PREF_CURSOR_SCROLL_WRAP">scroll_wrap</string>
    <string name="SYNC_VOLUME_KEY">sync_volume</string>

    <string name="pref_sync_volume_title">Sync radio and tablet volumes</string>
    <string name="pref_sync_volume_summary_on">Radio volume and tablet music volume are synced</string>
    <string name="pref_sync_volume_summary_off">Radio volume will be stored separately to tablet music volume</string>

    <string name="RADIO_MODE_KEY">radio_mode</string>
    <string name="fm_frequency_placeholder">%s MHz</string>
    <string name="remove_station_description">Remove this channel</string>
    <string name="channel_already_exists_message">Channel already saved</string>
    <string name="pref_dab_mode_enabled_key">dab_mode_enabled</string>
    <string name="pref_dab_mode_enabled_title">DAB mode</string>
    <string name="pref_dab_mode_enabled_summary_on">Enabled</string>
    <string name="pref_dab_mode_enabled_summary_off">Disabled</string>
    <string name="pref_fm_mode_enabled_key">pref_fm_mode_enabled</string>
    <string name="pref_fm_mode_enabled_title">FM mode</string>
    <string name="mode_alert_message">At least one mode must be enabled</string>
    <string name="pref_skip_buttons_control_summary">If checked then the "physical" skip media buttons will skip to the next saved FM station,
        otherwise they will control FM search</string>
    <string name="pref_skip_buttons_control_key">pref_skip_buttons_control</string>
    <string name="pref_skip_buttons_control_title">FM Skip buttons</string>
    <string name="pref_clear_fm_stations_key">pref_clear_fm_stations_key</string>
    <string name="pref_clear_fm_stations_title">Clear FM stations</string>
    <string name="pref_clear_fm_stations_summary">Clear all saved FM stations</string>
    <string name="TOTAL_COLLECTED_DAB_STATIONS_KEY">total_collected_dab_stations</string>
    <string name="no_saved_stations_message">No saved stations</string>
    <string name="dab">DAB</string>
    <string name="fm">FM</string>
    <string name="pref_cursor_beta_mode">pref_cursor_beta</string>
    <string name="settings_cursor_beta_title">Beta cursor scrolling</string>
    <string name="settings_cursor_beta_summary">Having this on means the cursor is more responsive but more laggy</string>
    <string name="pref_fm_stereo_enabled_key">pref_fm_stereo_mode_enabled</string>
    <string name="pref_fm_stereo_enabled_title">FM Stereo</string>
    <string name="pref_fm_stereo_enabled_summary">When FM stereo is enabled, audio doesn\'t sound as clear with a weak</string>


    <string-array name="STATION_GENRES">
        <item /> <!--0 is Nothing-->
        <item>News</item>
        <item>Current Affairs</item>
        <item>Information</item>
        <item>Sport</item>
        <item>Education</item>
        <item>Drama</item>
        <item>Arts</item>
        <item>Science</item>
        <item>Talk</item>
        <item>Pop Music</item>
        <item>Rock Music</item>
        <item>Easy Listening</item>
        <item>Light Classical</item>
        <item>Classical Music</item>
        <item>Other Music</item>
        <item>Weather</item>
        <item>Finance</item>
        <item>Children</item>
        <item>Factual</item>
        <item>Religion</item>
        <item>Phone In</item>
        <item>Travel</item>
        <item>Leisure</item>
        <item>Jazz and Blues</item>
        <item>Country Music</item>
        <item>National Music</item>
        <item>Oldies Music</item>
        <item>Folk Music</item>
        <item>Documentary</item>
        <item>Undefined</item>
        <item>Undefined</item>
    </string-array>

    <string-array name="STEREO_AUDIO_NAMES">
        <item>Stereo</item>
        <item>Joint Stereo</item>
        <item>Dual Channel</item>
        <item>Mono</item>
    </string-array>

    <string-array name="PLAYSTATUS_VALUES">
        <item>Playing</item>
        <item>Searching</item>
        <item>Tuning</item>
        <item>Stop</item>
        <item>Sorting</item>
        <item>Reconfiguration</item>
    </string-array>
</resources>
