<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_title_radio">
        <Preference
            android:key="@string/setting_perform_dab_search_button_key"
            android:title="@string/setting_perform_dab_search_text"
            android:summary="@string/setting_perform_dab_search_summary" />
        <Preference
            android:key="@string/pref_clear_fm_stations_key"
            android:title="@string/pref_clear_fm_stations_title"
            android:summary="@string/pref_clear_fm_stations_summary" />
        <CheckBoxPreference
            android:key="@string/pref_dab_mode_enabled_key"
            android:title="@string/pref_dab_mode_enabled_title"
            android:summaryOn="@string/pref_dab_mode_enabled_summary_on"
            android:summaryOff="@string/pref_dab_mode_enabled_summary_off"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_fm_mode_enabled_key"
            android:title="@string/pref_fm_mode_enabled_title"
            android:summaryOn="@string/pref_dab_mode_enabled_summary_on"
            android:summaryOff="@string/pref_dab_mode_enabled_summary_off"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_fm_stereo_enabled_key"
            android:title="@string/pref_fm_stereo_enabled_title"
            android:summary="@string/pref_fm_stereo_enabled_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_title_control">

        <CheckBoxPreference
            android:key="@string/setting_play_on_open"
            android:title="@string/setting_play_on_open"
            android:summary="@string/setting_play_on_open_summary"
            />

        <CheckBoxPreference
            android:key="@string/setting_headunitcontroller_input"
            android:title="@string/setting_headunitcontroller_input"
            android:summary="@string/setting_headunitcontroller_input_summary"
            />

        <CheckBoxPreference
            android:key="@string/setting_scroll_wrap"
            android:title="@string/setting_scroll_wrap"
            android:summary="@string/setting_scroll_warp_summary"
            />

        <CheckBoxPreference
            android:key="@string/pref_skip_buttons_control_key"
            android:title="@string/pref_skip_buttons_control_title"
            android:summary="@string/pref_skip_buttons_control_summary"
            android:defaultValue="true"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_title_volume">
        <ListPreference
            android:key="@string/setting_duck_volume"
            android:title="@string/setting_duck_volume"
            android:summary="@string/setting_duck_volume_summary" />

        <CheckBoxPreference
            android:key="@string/pref_sync_volume_key"
            android:title="@string/pref_sync_volume_title"
            android:summaryOn="@string/pref_sync_volume_summary_on"
            android:summaryOff="@string/pref_sync_volume_summary_off"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_category_title">
        <Preference
            android:key="pref_static_field_key"
            android:selectable="false"
            android:persistent="false"
            android:summary="@string/about_text"/>
    </PreferenceCategory>
</PreferenceScreen>
